@@ -9,7 +9,8 @@ EXTRA_DIST = usepackage.conf
 
 CLEANFILES = use.1 use.bsh use.csh use.ksh
 MAINTAINERCLEANFILES = grammar.c scanner.c configure Makefile.in \
-	depcomp install-sh missing mkinstalldirs
+	depcomp install-sh missing mkinstalldirs aclocal.m4 config.log \
+	config.status 
 
 AM_YFLAGS = -d
 AM_CPPFLAGS = -DDEFAULT_PACKAGE_PATH='"$(sysconfdir):~:."'
